# algorithms

./: .gitignore  README.md  openvpn-science.ovpn
practicals/practical1/code/: CMakeLists.txt
practicals/practical1/code/src/: Cluster.cpp  Cluster.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  Stopwatch.h  Supercluster.cpp
practicals/practical1/deliverable/code/src/: Solver.cpp
practicals/practical1/input/Asamples/samples/: big1-10.out  small1-10.out
practicals/practical1/input/customsamples/: small_8.in
practicals/practical1/report/: algorithmsteps.md  report
practicals/practical2/code/: CMakeLists.txt
practicals/practical2/code/src/: ActorGame.cpp  Cluster.cpp  Cluster.h  HopcroftKarp.cpp  HopcroftKarp.h  Node.cpp  Node.h  Solver.cpp  Solver.h  Stopwatch.hpp
practicals/practical2/deliverable/1047390-1047400/Report/: .~lock.Algorithms_practical2.docx#  Algorithms_practical2.docx
practicals/practical2/input/samples/: EXPECTED_OUT_RESULTS.out
practicals/practical2/report/: AanpakPracticum2.txt  Algorithms_practical2.docx
problems/week1/: feedback.txt  problems week1.tex
problems/week10/: problems week10.tex
problems/week11/: problems week11.tex
problems/week12/: problems week12.tex
problems/week13/: problems week13.tex
problems/week2/: problems week2.tex
problems/week3/: problems week3.tex
problems/week4/: problems week4.tex
problems/week5/: problems week5.tex
problems/week6/: problems week6.tex
problems/week7/: problems week7.tex
problems/week8/: problems week8.tex
problems/week9/: problems week9.tex
(+5 files in other folders)
